--- a/index.html
+++ b/index.html
@@ -4,23 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Kokoa clone</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div clss="status-bar">
-        <div class="status-bar__column"></div>
-            <span>No Service</span>
-            <!-- To Do: Wifi Icon -->
-        <div class="status-bar__column">
-            <span>18:43</span>
+    
+        <img src="img/logo.jpg" class="logo"/>
+        <div class="login__with-kakao">
+            <p>No Kakao account and Password are required.<br>Just log in with Kakao Talk.</p>
+            <div class="login__with-kakao__button">
+                <svg width="20" height="20" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M5 9a7 7 0 0 1 14 0c0 2.025-.67 4.236-1.85 5.956-1.042 1.52-2.543 2.731-4.4 2.992v.302c0 .414.336.75.75.75h3.25A2.25 2.25 0 0 1 19 21.25v1a.75.75 0 0 1-1.5 0v-1a.75.75 0 0 0-.75-.75H13.5a2.25 2.25 0 0 1-2.25-2.25v-.302c-1.857-.261-3.358-1.473-4.4-2.992C5.67 13.236 5 11.025 5 9Zm7.92-3.894a.75.75 0 0 0-.344 1.46 2.505 2.505 0 0 1 1.856 1.853.75.75 0 1 0 1.46-.347 4.005 4.005 0 0 0-2.972-2.966Z" fill="#333333"/></svg>
+                <span>Log in with Hamzzi Talk</span>
+            </div>
         </div>
-        <div class="status-bar__column">
-            <span>110%</span>
-            <!-- Battery Icon -->
-            <!-- Lightning Icon -->
+        <div class="login--form">
+        <div class="login--form__input">
+            <p>
+                You can now log in with your account information.
+            </p>
+            <input type="text" placeholder="KakaoMail ID, email, phone number"/>
+            <input type="text" placeholder="Password"/>
+        </div>
+        <div class="login--form__stay">
+            <svg width="20" height="20" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2Zm0 1.5a8.5 8.5 0 1 0 0 17 8.5 8.5 0 0 0 0-17Zm-1.25 9.94 4.47-4.47a.75.75 0 0 1 1.133.976l-.073.084-5 5a.75.75 0 0 1-.976.073l-.084-.073-2.5-2.5a.75.75 0 0 1 .976-1.133l.084.073 1.97 1.97 4.47-4.47-4.47 4.47Z" fill="#cccccc"/></svg>
+            <span>Stay Logged In</span>
+        </div>
+        <div class="login--button">Log In</div>
+        <div class="login--option">
+            <span>Sign up</span>
+            <span>|</span>
+            <span>Kakao Account</span>
+            <span>|</span>
+            <span>Reset Password</span>
         </div>
     </div>
-    <script src="https://kit.fontawesome.com/6478f529f2.js"
-crossorigin="anonymous"></script>
 </body>
 </html>
