some friends update

--- a/friends.html
+++ b/friends.html
@@ -26,22 +26,54 @@
             <ion-icon name="play-outline"></ion-icon>
         </div>
     </div>
+    <div class="my-profile-multi">
     <div class="sub-header">
-        <h4>내 멀티프로필</h4>
+        <h4>내 멀티프로필 1</h4>
         <ion-icon name="chevron-up-outline"></ion-icon>
     </div>
-    <div class="sub-header">
-        <h4>추천친구</h4>
-        <ion-icon name="chevron-up-outline"></ion-icon>
+        <div class="my-profile-multi__profiles">
+            <div class="my-profile-multi__profile">
+                <img src="https://pds.joongang.co.kr/news/component/htmlphoto_mmdata/202010/22/2182ecd3-b8cc-4993-98a7-8c2568f9fbbc.jpg" alt="">
+                <h4>쿠크</h4>
+            </div>
+            <div class="my-profile-multi__profile">
+                <ion-icon name="add-outline"></ion-icon>
+                <h4>만들기</h4>
+            </div>
+        </div>
     </div>
-    <div class="sub-header">
-        <h4>채널</h4>
-        <ion-icon name="chevron-up-outline"></ion-icon>
-    </div>
-    <div class="sub-header">
-        <h4>친구 716</h4>
-        <ion-icon name="chevron-up-outline"></ion-icon>
-    </div>
+    <div class="profile__recommand-friends">
+        <div class="sub-header">
+            <h4>추천친구</h4>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+        </div>
+            <div class="profile__recommandation">
+                <div class="profile__recommand">
+                    <img src="https://pds.joongang.co.kr/news/component/htmlphoto_mmdata/202010/22/2182ecd3-b8cc-4993-98a7-8c2568f9fbbc.jpg" alt="">
+                    <span>새로운 친구를 만나보세요!</span>
+                    <div class="profile__recommand__more">
+                        <h4>99</h4>
+                        <ion-icon name="chevron-forward-outline"></ion-icon>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="profile__recommand-friends">
+            <div class="sub-header">
+                <h4>채널</h4>
+                <ion-icon name="chevron-up-outline"></ion-icon>
+            </div>
+                <div class="profile__recommandation">
+                    <div class="profile__recommand">
+                        <img src="https://pds.joongang.co.kr/news/component/htmlphoto_mmdata/202010/22/2182ecd3-b8cc-4993-98a7-8c2568f9fbbc.jpg" alt="">
+                        <span>채널</span>
+                        <div class="profile__recommand__more">
+                            <h4>70</h4>
+                            <ion-icon name="chevron-forward-outline"></ion-icon>
+                        </div>
+                    </div>
+                </div>
+            </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
