link to friends

--- a/friends.html
+++ b/friends.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <div class="my-profile"> 
-        <img src="https://pds.joongang.co.kr/news/component/htmlphoto_mmdata/202010/22/2182ecd3-b8cc-4993-98a7-8c2568f9fbbc.jpg" alt="">
+        <img src="img/cooku2.jpeg" alt="">
         <div class="profile__info">
             <span class="profile__name">Hamzzisu</span>
             <span class="profile__introduce">Every wall is door</span>
@@ -37,7 +37,7 @@
     </div>
         <div class="my-profile-multi__profiles">
             <div class="my-profile-multi__profile">
-                <img src="https://pds.joongang.co.kr/news/component/htmlphoto_mmdata/202010/22/2182ecd3-b8cc-4993-98a7-8c2568f9fbbc.jpg" alt="">
+                <img src="img/cooku.jpeg" alt="">
                 <h4>쿠크</h4>
             </div>
             <div class="my-profile-multi__profile">
@@ -53,7 +53,7 @@
         </div>
             <div class="profile__recommandation">
                 <div class="profile__recommand">
-                    <img src="https://pds.joongang.co.kr/news/component/htmlphoto_mmdata/202010/22/2182ecd3-b8cc-4993-98a7-8c2568f9fbbc.jpg" alt="">
+                    <img src="img/tomi.jpeg" alt="">
                     <span>새로운 친구를 만나보세요!</span>
                     <div class="profile__recommand__more">
                         <h4>99</h4>
@@ -69,7 +69,7 @@
             </div>
                 <div class="profile__recommandation">
                     <div class="profile__recommand">
-                        <img src="https://pds.joongang.co.kr/news/component/htmlphoto_mmdata/202010/22/2182ecd3-b8cc-4993-98a7-8c2568f9fbbc.jpg" alt="">
+                        <img src="img/tomi2.jpeg" alt="">
                         <span>채널</span>
                         <div class="profile__recommand__more">
                             <h4>70</h4>
